--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,22 +6,18 @@
 
 html,
 body {
-  max-width: 100vw;
+  width: 100%;
+  height: 100%;
   overflow-x: hidden;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
+  color: white;
+  background: rgb(2, 0, 36);
   background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+    90deg,
+    rgb(2, 0, 36) 0%,
+    rgb(92, 9, 121) 50%,
+    rgb(2, 0, 36)
+  );
 }
